# Centerstage

./: Centerstage.sqlite3  LICENSE  README.md  cs.py  editset.py  editshow.py  install.sh  loaddb.py  main.py  selectshow.py
conf/: global.sh  install_wpa.sh  keysid.conf  modules  myscript.service  rc.local  read_key.py  readkey.service
keysid-1.1/: AUTHORS  ChangeLog  Makefile.am  Makefile.in  README  config.h.in  configure  configure.ac  keyscfg.8  keyscfg.c  keysid.8  keysid.c  keysid.conf.sample
keysid-1.1/autom4te.cache/: output.0  requests  traces.0  traces.1
sbin/: kiosk.sh  pointer_down  pointer_up
test/: Centerstage.sqlite3  test.py
www/: index.html
www/admin/: cleanup.php  copy_show.php  create.php  create_do.php  del_set.php  del_show.php  del_song.php  edit.css  edit_announce.php  edit_page.php  edit_page_do.php  edit_set.php  edit_set_do.php  edit_show.php  edit_show_do.php  edit_song.php  edit_song_do.php  pointer.php  show.php  song.php  text2html.php
www/cstage/: cstage.css  cstage.php  tiny.php
www/db/: Centerstage.sqlite3
